--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Redirect Link</title>
   </head>
   <body onload="directKe()">
-    <h1>Halaman ini hanya untuk redirect saja</h1>
+    <img src="snail.gif" alt="Loading..." />
     <script>
         function directKe() {
           window.location.href = "https://asetbppkad.github.io/login_alternate.github.io";
