--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Redirect Link</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>redirect</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body onload="directKe()">
-    <img src="snail.gif" alt="Loading..." />
-    <script>
-        function directKe() {
-          window.location.href = "https://asetbppkad.github.io/login_alternate.github.io";
-        }
-      </script>
+  <body>
+    <!--  -->
+    <div class="row" style="display: flex; justify-content: center">
+      <div class="col-sm-4 col-md-4">
+        <img src="snail.gif" alt="Loading..." width="90%" />
+      </div>
+    </div>
   </body>
 </html>
