--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <title>redirect</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <!--  -->
+  <body onload="linkKe()">
     <div class="row" style="display: flex; justify-content: center">
       <div class="col-sm-4 col-md-4">
         <img src="snail.gif" alt="Loading..." width="90%" />
       </div>
     </div>
+    <script>
+        function linkKe() {
+          window.location.href = "https://asetbppkad.github.io/login_alternate.github.io";
+        }
+      </script>
   </body>
 </html>
