--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <script>
         function linkKe() {
           // window.location.href = "https://asetbppkad.github.io/login_alternate.github.io";
-          window.location.href = "http://103.146.132.145:9637/";
+          // window.location.href = "http://103.146.132.145:9637/";
+          window.location.href = "https://aset.sampangkab.go.id/";
         }
       </script>
   </body>
